--- a/website/frontend/html/register.html
+++ b/website/frontend/html/register.html
@@ -1,26 +1,47 @@
 <!DOCTYPE html>
-<html lang="th">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>สมัครสมาชิก</title>
-  <link rel="stylesheet" href="/static/css/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/Website/frontend/css/style.css"> <!-- เชื่อม CSS -->
+    <title>Register</title>
 </head>
 <body>
-  <h1>สมัครสมาชิก</h1>
-  
-  <form action="/register" method="post">
-    <label for="username">ชื่อผู้ใช้:</label><br>
-    <input type="text" id="username" name="username" required><br><br>
 
-    <label for="email">อีเมล:</label><br>
-    <input type="email" id="email" name="email" required><br><br>
+    <div class="container">
+        <h1>สมัครสมาชิก</h1>
 
-    <label for="password">รหัสผ่าน:</label><br>
-    <input type="password" id="password" name="password" required><br><br>
+        <form action="/register" method="post">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
 
-    <button type="submit">สมัครสมาชิก</button>
-  </form>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
 
-  <p><a href="/">กลับหน้าแรก</a></p>
+            <label for="first_name">First Name:</label>
+            <input type="text" id="first_name" name="first_name" required>
+
+            <label for="last_name">Last Name:</label>
+            <input type="text" id="last_name" name="last_name" required>
+
+            <label for="birth_day">Birth Day:</label>
+            <input type="date" id="birth_day" name="birth_day" required>
+
+            <label for="phone_num">Phone Number:</label>
+            <input type="text" id="phone_num" name="phone_num" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="nickname">Nickname:</label>
+            <input type="text" id="nickname" name="nickname" required>
+
+            <button type="submit">Register</button>
+        </form>
+
+        <a href="/">กลับหน้าแรก</a>
+    </div>
+
 </body>
 </html>
